fix featured porduct + posts h-spacing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -233,7 +233,8 @@ p {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  padding-top: 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .featured-post {
